put that yellow back

--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@
 
 		#seven {
 			background: rgb(255, 255, 255);
-			background: linear-gradient(90deg, rgb(214, 186, 25)0%, rgba(255, 255, 255, 0) 38%);
+			background: linear-gradient(90deg, rgb(214, 186, 25)0%, rgba(255, 255, 255, 0) 38%) !important;
 		}
 
 		#convivencia {
