put that yellow back 2

--- a/index.html
+++ b/index.html
@@ -1632,11 +1632,7 @@
 			margin-top: 10px ;
 		}
 
-		#seven {
-			background: rgb(255, 255, 255);
-			background: linear-gradient(90deg, rgb(214, 186, 25)0%, rgba(255, 255, 255, 0) 38%) !important;
-		}
-
+	
 		#convivencia {
 			background: rgb(255, 255, 255);
 			background: linear-gradient(90deg, rgba(255, 255, 255, 0) 68%, rgb(212, 40, 40) 100%);
@@ -1645,13 +1641,18 @@
 		#premium {
 
 			background: rgb(255, 255, 255);
-			background: linear-gradient(90deg, rgb(12 113 195)0%, rgba(255, 255, 255, 0) 38%);
+			background: linear-gradient(90deg, rgb(12, 113, 195)0%, rgba(255, 255, 255, 0) 38%);
 		}
 
 		#mardelcup {
 			background: rgb(255, 255, 255);
 			background: linear-gradient(90deg, rgba(255, 255, 255, 0) 68%, rgba(41, 140, 42, 1) 100%);
 		}
+		#seven {
+			background: rgb(255, 255, 255);
+			background: linear-gradient(90deg, rgba(214, 186, 25, 1)0%, rgba(255, 255, 255, 0) 38%) !important;
+		}
+
 	</style>
 	<style id="et-core-unified-cached-inline-styles-2">
 		.et_pb_text_20 p {
