put that yellow back 3

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 							<div class="et_pb_module et_pb_divider et_pb_divider_2 et_pb_divider_position_ et_pb_space">
 								<div class="et_pb_divider_internal"></div>
 							</div>
-							<div id="seven" class="feature">
+							<div id="seven" class="feature seven2">
 
 								<div>
 									<div>
@@ -1648,9 +1648,9 @@
 			background: rgb(255, 255, 255);
 			background: linear-gradient(90deg, rgba(255, 255, 255, 0) 68%, rgba(41, 140, 42, 1) 100%);
 		}
-		#seven {
-			background: rgb(255, 255, 255);
-			background: linear-gradient(90deg, rgba(214, 186, 25, 1)0%, rgba(255, 255, 255, 0) 38%) !important;
+		.seven2 {
+			background: rgb(250, 250, 250);
+			background: linear-gradient(91deg, rgb(253, 215, 1)0%, rgba(255, 255, 255, 0) 38%) !important;
 		}
 
 	</style>
