put that yellow back 23

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 							<div class="et_pb_module et_pb_divider et_pb_divider_2 et_pb_divider_position_ et_pb_space">
 								<div class="et_pb_divider_internal"></div>
 							</div>
-							<div id="seven" class="feature seven2">
+							<div id="seven" class="feature seven2" style="background: linear-gradient(91deg, rgb(253, 215, 1)0%, rgba(255, 255, 255, 0) 38%) !important;">
 
 								<div>
 									<div>
