--- a/index.html
+++ b/index.html
@@ -894,8 +894,8 @@
 
 										<div class="et_pb_text_inner">
 											<h3>Mar del Cup &#8211; Futbol Femenino</h3>
-											<p>Sábado <strong>6</strong>  y Domingo <strong>7</strong> de Noviembre
-												de <strong>2021</strong> &#8211; Mar del Plata.</p>
+											<p>Viernes <strong></strong>11</strong>  y Sábado <strong>12</strong> de Noviembre
+												de <strong>2022</strong> &#8211; Mar del Plata.</p>
 											<p class="wideParagraph"><img loading="lazy"
 													class="alignnone size-medium wp-image-283"
 													src="images/mardelcup.png" alt="" width="300" height="168"
