--- a/index.html
+++ b/index.html
@@ -362,20 +362,20 @@
 
 
 
-								<div class="et_pb_row et_pb_row_0 et_pb_row_fullwidth  et_pb_css_mix_blend_mode">
-									<div
-										class="et_pb_column et_pb_column_4_4 et_pb_column_0    et_pb_css_mix_blend_mode_passthrough et-last-child">
+								<div style="height: 240px;">
+									<!-- <div
+										class="et_pb_column et_pb_column_4_4 et_pb_column_0     et-last-child">
 
 
 										<div
-											class="et_pb_module et_pb_text et_pb_text_0 et_animated et_pb_bg_layout_dark  et_pb_text_align_right">
+											class="et_pb_module et_pb_text et_pb_text_0   et_pb_bg_layout_dark   ">
 
 
 											<div class="et_pb_text_inner">
 												<p>&#8211; DS &#8211; </p>
 											</div>
 										</div>
-									</div>
+									</div> -->
 
 
 								</div>
@@ -596,8 +596,8 @@
 											class="et_pb_module et_pb_text et_pb_text_14 et_pb_bg_layout_light  et_pb_text_align_center">
 
 
-											<div class="et_pb_text_inner">
-												<h2>Quienes somos</h2>
+											<div class="et_pb_text_inner ">
+												<h2 >Quienes somos</h2>
 												<p style="text-align: center;">Somos un equipo de trabajo dedicado
 													exclusivamente a la gestión, desarrollo y organización de eventos
 													deportivos vinculados a la actividad deportiva, escolar, amateur, y
@@ -614,7 +614,7 @@
 										<div class="et_pb_module et_pb_image et_pb_image_0 et_always_center_on_mobile">
 
 
-											<span class="et_pb_image_wrap "><img loading="lazy"
+											<span class="et_pb_image_wrap fadeIn"><img loading="lazy"
 													src="images/DSC_0096-scaled.jpg" alt="" /></span>
 										</div>
 									</div>
@@ -625,7 +625,7 @@
 							<div class="et_pb_module et_pb_divider et_pb_divider_2 et_pb_divider_position_ et_pb_space">
 								<div class="et_pb_divider_internal"></div>
 							</div>
-							<div id="seven" class="feature seven2" >
+							<div id="seven" class="feature fadeIn seven2" >
 
 								<div>
 									<div>
@@ -638,7 +638,7 @@
 											muchas cosas mas!!! , No te quedes afuera… Sumate ya!</p>
 									</div>
 								</div>
-								<div class="imagenes"><img loading="lazy"
+								<div class="imagenes fadeLeft"><img loading="lazy"
 										src="./galeria/images/encuentro-seven-4-400x284.jpg" alt="seven">
 									<img loading="lazy" src="./galeria/images/encuentro-seven-3-400x284.jpg"
 										alt="seven"></div>
@@ -648,8 +648,8 @@
 							</div>
 
 							<!-- .et_pb_section -->
-							<div id="convivencia" class="feature">
-								<div class="imagenes"><img loading="lazy"
+							<div id="convivencia" class="feature fadeIn">
+								<div class="imagenes fadeRight"><img loading="lazy"
 										src="./galeria/images/encuentro-convivencia-400x284.jpg" alt="seven">
 									<img loading="lazy" src="./galeria/images/encuentro-convivencia-3-400x284.jpg"
 										alt="seven"></div>
@@ -665,7 +665,7 @@
 									</div>
 								</div>
 							</div> <!-- .et_pb_section -->
-							<div id="premium" class="feature">
+							<div id="premium" class="feature fadeIn">
 
 								<div>
 									<div>
@@ -694,11 +694,11 @@
 										</p>
 									</div>
 								</div>
-								<div class="imagenes"><img loading="lazy" src="./images/premium1.jpg" alt="seven">
+								<div class="imagenes fadeLeft"><img loading="lazy" src="./images/premium1.jpg" alt="seven">
 									<img loading="lazy" src="./images/premium2.jpg" alt="seven"></div>
 							</div>
-							<div id="mardelcup" class="feature">
-								<div class="imagenes"><img loading="lazy" src="./images/mardelcup1.jpg" alt="seven">
+							<div id="mardelcup" class="feature  fadeIn">
+								<div class="imagenes fadeRight"><img loading="lazy" src="./images/mardelcup1.jpg" alt="seven">
 									<img loading="lazy" src="./images/mardelcup2.jpg" alt="seven"></div>
 								<div>
 									<div>
@@ -1200,18 +1200,22 @@
 
 
 							<div class="et_pb_row et_pb_row_17 et_pb_row_fullwidth  et_pb_css_mix_blend_mode">
-								<div
-									class="et_pb_column et_pb_column_4_4 et_pb_column_34    et_pb_css_mix_blend_mode_passthrough et-last-child">
+								<div style="height: 70px;">
+									<!-- <div
+										class="et_pb_column et_pb_column_4_4 et_pb_column_0     et-last-child">
 
 
-									<div
-										class="et_pb_module et_pb_text et_pb_text_22 et_animated et_pb_bg_layout_dark  et_pb_text_align_right">
+										<div
+											class="et_pb_module et_pb_text et_pb_text_0   et_pb_bg_layout_dark   ">
 
 
-										<div class="et_pb_text_inner">
-											<p>Eventos</p>
+											<div class="et_pb_text_inner">
+												<p>&#8211; DS &#8211; </p>
+											</div>
 										</div>
-									</div>
+									</div> -->
+
+
 								</div>
 
 
@@ -1559,6 +1563,9 @@
 		/* ]]> */
 	</script>
 	<script type='text/javascript' src='js/custom.min.js'></script>
+	<script>
+		var styles=".fadeInC{animation:fadeAn 0.87s;}@keyframes fadeAn {from {opacity: 0;}to {opacity: 1;}}.scaleUpC{animation:scaleU 0.87s;}@keyframes scaleU {from {opacity: 0;transform: scale(0.7);}to {opacity: 1;transform: scale(1);}}.scaleDC{animation:scaleD 0.87s;}@keyframes scaleD {from {opacity: 0;transform: scale(1.2);}to {opacity: 1;transform: scale(1);}}.fadeLC{animation:fadeL 0.87s;}@keyframes fadeL {from {opacity: 0;transform: translateX(-30px);}to {opacity: 1;transform: translateX(0);}} .fadeRC{animation:fadeR 0.87s;}@keyframes fadeR {from {opacity: 0;transform: translateX(30px);}to {opacity: 1;transform: translateX(0);}}";let styleSheet=document.createElement("style");styleSheet.type="text/css",styleSheet.innerText=styles,document.head.appendChild(styleSheet);let fadeInTarg=document.querySelectorAll(".fadeIn"),scaleDTarg=document.querySelectorAll(".scaleDown"),scaleUTarg=document.querySelectorAll(".scaleUp"),fadeLeftTarg=document.querySelectorAll(".fadeLeft"),fadeRightTarg=document.querySelectorAll(".fadeRight"),ae=(e,a)=>{e.classList.add(a),setTimeout(()=>{e.style.opacity=1},50)};function io(e,a){new IntersectionObserver(t=>t.forEach(t=>(t=>t.isIntersecting&&ae(e,a))(t))).observe(e)}fadeLeftTarg&&fadeLeftTarg.forEach(e=>{e.style.opacity=0,io(e,"fadeRC")}),fadeRightTarg&&fadeRightTarg.forEach(e=>{e.style.opacity=0,io(e,"fadeLC")}),fadeInTarg&&fadeInTarg.forEach(e=>{e.style.opacity=0,io(e,"fadeInC")}),scaleDTarg&&scaleDTarg.forEach(e=>{e.style.opacity=0,io(e,"scaleDC")}),scaleUTarg&&scaleUTarg.forEach(e=>{e.style.opacity=0,io(e,"scaleUpC")});
+	</script>
 	<style>
 		.feature {
 			/* display: flex; */
@@ -1609,14 +1616,14 @@
 		@media only screen and (min-width: 600px) {
 
 
-			#convivencia .imagenes :nth-child(1),
-			#mardelcup .imagenes :nth-child(1) {
+			#convivencia .imagenes  :nth-child(1),
+			#mardelcup .imagenes  :nth-child(1) {
 				transform: translate(13vw, 18vh);
 
 			}
 
-			#seven .imagenes :nth-child(1),
-			#premium .imagenes :nth-child(1) {
+			#seven .imagenes  :nth-child(1),
+			#premium .imagenes  :nth-child(1) {
 				transform: translate(-13vw, 18vh);
 
 			}
