--- a/index.html
+++ b/index.html
@@ -671,22 +671,24 @@
 									<div>
 										<h1>PREMIUM CUP</h1>
 										<p class="description">
-											Vas a experimentar un fin de semana intenso, en lo deportivo y en
-											actividades de todo tipo.
+											Por medio de la presente les hacemos llegar la invitación a la  PREMIUM CUP MAMIS Y LIBRES MAR DEL PLATA 2021 a realizarse el sábado 13 de noviembre de 2021.
+El costo por jugadora incluye:
+Inscripción al torneo
+Alojamiento con desayuno en hotelería 3 Estrellas*** noche del <b> viernes 12 y sábado 13.</b> <br>
+Cena en el hotel, viernes 12.
+Sabado 13 desayuno en los respectivos hoteles, almuerzo en el club.
+9:00hsin excepción, presentacion de los equipos en el club.
+Torneo jornada completa.
+Sabado  13 cena en el hotel
+Domingo  14 desayuno y check out
 
-											Vas a bailar sin parar durante todo el torneo, con nuestro equipo de
-											recreación <a href="https://www.facebook.com/CheChiqui">Che Chiqui</a>
-
-											Te vas a maquillar con el color de tu equipo, en nuestra carpa de
-											maquillaje!
-
-											Vas a experimentar deslizarte en una tabla de surf con instructores
-											profesionales, equipos de neoprene y tablas!
-
-											Y lo vamos a cerrar todos juntos en una fiesta frente al mar con entrega de
-											premios en uno de los lugares más bellos de la ciudad.
-
-											Mar del Plata es un destino único, no te lo pierdas.
+Durante el torneo
+Carpa de maquillaje artístico en el predio!!!
+Hidratacion ilimitada en todas las canchas.
+Pulseras identificatorias
+Seguridad privada, en todo el predio
+Ambulancia con medico y equipo de reanimación
+										<br>	Mar del Plata es un destino único, no te lo pierdas.
 
 											Te esperamos para vivir juntos esta fiesta del hockey!
 											<br>
