--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 									<div>
 										<h1>PREMIUM CUP</h1>
 										<p class="description">
-											Por medio de la presente les hacemos llegar la invitación a la  PREMIUM CUP MAMIS Y LIBRES MAR DEL PLATA 2021 a realizarse el sábado 13 de noviembre de 2021.
+											Por medio de la presente les hacemos llegar la invitación a la  PREMIUM CUP MAMIS Y LIBRES MAR DEL PLATA 2021 a realizarse el viernes 12 y el sábado 13 de noviembre de 2021.
 El costo por jugadora incluye:
 Inscripción al torneo
 Alojamiento con desayuno en hotelería 3 Estrellas*** noche del <b> viernes 12 y sábado 13.</b> <br>
