--- a/index.html
+++ b/index.html
@@ -672,16 +672,16 @@
 										<h1>PREMIUM CUP</h1>
 										<p class="description">
 										
-											Por medio de la presente les hacemos llegar la invitación a la  PREMIUM CUP MAMIS Y LIBRES MAR DEL PLATA 2021 a realizarse el viernes 12 y el sábado 13 de noviembre de 2021.
+											Por medio de la presente les hacemos llegar la invitación a la  PREMIUM CUP MAMIS + 30 MAR DEL PLATA 2021 a realizarse el viernes 26 y el sábado 27 de noviembre de 2021.
 El costo por jugadora incluye:
 Inscripción al torneo
-Alojamiento con desayuno en hotelería 3 Estrellas*** noche del <b> viernes 12 y sábado 13.</b> <br>
-Cena en el hotel, viernes 12.
-Sabado 13 desayuno en los respectivos hoteles, almuerzo en el club.
+Alojamiento con desayuno en hotelería 3 Estrellas*** noche del <b> viernes 26 y sábado 27.</b> <br>
+Cena en el hotel, viernes 26.
+Sabado 27 desayuno en los respectivos hoteles, almuerzo en el club.
 9:00hsin excepción, presentacion de los equipos en el club.
 Torneo jornada completa.
-Sabado  13 cena en el hotel
-Domingo  14 desayuno y check out
+Sabado  27 cena en el hotel
+Domingo  28 desayuno y check out
 
 Durante el torneo
 Carpa de maquillaje artístico en el predio!!!
@@ -932,8 +932,8 @@ Ambulancia con medico y equipo de reanimación
 
 
 										<div class="et_pb_text_inner">
-											<h3>Premium Cup &#8211; Mamis y Libres</h3>
-											<p> Viernes <strong>12</strong> Y Sábado <strong>13</strong> de
+											<h3>Premium Cup &#8211; MAMIS + 30</h3>
+											<p> Viernes <strong>26</strong> Y Sábado <strong>27</strong> de
 												Noviembre
 												de <strong>2021</strong> &#8211; Mar del Plata</p>
 											<p><img loading="lazy" class="alignnone size-medium wp-image-281"
