--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 
 
 											<div class="et_pb_text_inner ">
-												<h2 >Quienes somos</h2>
+												<h2>Quienes somos</h2>
 												<p style="text-align: center;">Somos un equipo de trabajo dedicado
 													exclusivamente a la gestión, desarrollo y organización de eventos
 													deportivos vinculados a la actividad deportiva, escolar, amateur, y
@@ -625,11 +625,11 @@
 							<div class="et_pb_module et_pb_divider et_pb_divider_2 et_pb_divider_position_ et_pb_space">
 								<div class="et_pb_divider_internal"></div>
 							</div>
-							<div id="seven" class="feature fadeIn seven2" >
+							<div id="seven" class="feature fadeIn seven2">
 
 								<div>
 									<div>
-										<h1>SEVEN</h1>
+										<h1>40 Torneo Seven Semana del Mar 2021</h1>
 										<p class="description">Seven Semana del Mar, el evento de hockey femenino mas
 											convocante de nuestra ciudad. Participan mas de 35 clubes, desde Ushuaia a
 											Salta y países vecinos. Congrega a mas de 1200 jugadoras. Disfrutá de tu
@@ -655,7 +655,7 @@
 										alt="seven"></div>
 								<div>
 									<div>
-										<h1>CONVIVENCIA</h1>
+										<h1>XXVI ENCUENTRO CONVIVENCIA 2022</h1>
 										<p class="description">Encuentro Convivencia, 26 años de trayectoria hacen del
 											Encuentro Convivencia uno de los eventos deportivos nivel escolar más
 											importantes de la ciudad. Instituciones de todo el pais participan de esta
@@ -669,27 +669,30 @@
 
 								<div>
 									<div>
-										<h1>PREMIUM CUP</h1>
+										<h1>PREMIUM CUP MAMIS + 30 2021</h1>
 										<p class="description">
-										
-											Por medio de la presente les hacemos llegar la invitación a la  PREMIUM CUP MAMIS + 30 MAR DEL PLATA 2021 a realizarse el viernes 26 y el sábado 27 de noviembre de 2021.
-El costo por jugadora incluye:
-Inscripción al torneo
-Alojamiento con desayuno en hotelería 3 Estrellas*** noche del <b> viernes 26 y sábado 27.</b> <br>
-Cena en el hotel, viernes 26.
-Sabado 27 desayuno en los respectivos hoteles, almuerzo en el club.
-9:00hsin excepción, presentacion de los equipos en el club.
-Torneo jornada completa.
-Sabado  27 cena en el hotel
-Domingo  28 desayuno y check out
 
-Durante el torneo
-Carpa de maquillaje artístico en el predio!!!
-Hidratacion ilimitada en todas las canchas.
-Pulseras identificatorias
-Seguridad privada, en todo el predio
-Ambulancia con medico y equipo de reanimación
-										<br>	Mar del Plata es un destino único, no te lo pierdas.
+											Por medio de la presente les hacemos llegar la invitación a la PREMIUM CUP
+											MAMIS + 30 MAR DEL PLATA 2021 a realizarse el viernes 26 y el sábado 27 de
+											noviembre de 2021.
+											El costo por jugadora incluye:
+											Inscripción al torneo
+											Alojamiento con desayuno en hotelería 3 Estrellas*** noche del <b> viernes
+												26 y sábado 27.</b> <br>
+											Cena en el hotel, viernes 26.
+											Sabado 27 desayuno en los respectivos hoteles, almuerzo en el club.
+											9:00hsin excepción, presentacion de los equipos en el club.
+											Torneo jornada completa.
+											Sabado 27 cena en el hotel
+											Domingo 28 desayuno y check out
+
+											Durante el torneo
+											Carpa de maquillaje artístico en el predio!!!
+											Hidratacion ilimitada en todas las canchas.
+											Pulseras identificatorias
+											Seguridad privada, en todo el predio
+											Ambulancia con medico y equipo de reanimación
+											<br> Mar del Plata es un destino único, no te lo pierdas.
 
 											Te esperamos para vivir juntos esta fiesta del hockey!
 											<br>
@@ -697,15 +700,17 @@ Ambulancia con medico y equipo de reanimación
 										</p>
 									</div>
 								</div>
-								<div class="imagenes fadeLeft"><img loading="lazy" src="./images/premium1.jpg" alt="seven">
+								<div class="imagenes fadeLeft"><img loading="lazy" src="./images/premium1.jpg"
+										alt="seven">
 									<img loading="lazy" src="./images/premium2.jpg" alt="seven"></div>
 							</div>
 							<div id="mardelcup" class="feature  fadeIn">
-								<div class="imagenes fadeRight"><img loading="lazy" src="./images/mardelcup1.jpg" alt="seven">
+								<div class="imagenes fadeRight"><img loading="lazy" src="./images/mardelcup1.jpg"
+										alt="seven">
 									<img loading="lazy" src="./images/mardelcup2.jpg" alt="seven"></div>
 								<div>
 									<div>
-										<h1>MARDEL CUP</h1>
+										<h1>MARDEL CUP 2022</h1>
 										<p class="description">El futbol femenino, ha venido evolucionado muchisimo en
 											los ultimos 15 años. Desde DS, con la experiencia que nos caracteriza,
 											buscamos la forma de hacer un torneo donde puedas disfrutar de un fin de
@@ -897,7 +902,8 @@ Ambulancia con medico y equipo de reanimación
 
 										<div class="et_pb_text_inner">
 											<h3>Mar del Cup &#8211; Futbol Femenino</h3>
-											<p>Viernes <strong></strong>11</strong>  y Sábado <strong>12</strong> de Noviembre
+											<p>Viernes <strong></strong>11</strong>  y Sábado <strong>12</strong> de
+												Noviembre
 												de <strong>2022</strong> &#8211; Mar del Plata.</p>
 											<p class="wideParagraph"><img loading="lazy"
 													class="alignnone size-medium wp-image-283"
@@ -1262,24 +1268,23 @@ Ambulancia con medico y equipo de reanimación
 										<div class="et-pb-contact-message"></div>
 
 										<div class="et_pb_contact">
-											<form class="et_pb_contact_form clearfix" name="contact" method="POST" data-netlify="true">
+											<form class="et_pb_contact_form clearfix" name="contact" method="POST"
+												data-netlify="true">
 												<p class="et_pb_contact_field et_pb_contact_field_0 et_pb_contact_field_last"
 													data-id="nombre" data-type="input">
 
 
-													<label for="name"
-														class="et_pb_contact_form_label">Nombre</label>
+													<label for="name" class="et_pb_contact_form_label">Nombre</label>
 													<input type="text" id="et_pb_contact_nombre_0" class="input"
-														value="" name="name"
-														data-required_mark="required" data-field_type="input"
-														data-original_id="nombre" placeholder="Nombre">
+														value="" name="name" data-required_mark="required"
+														data-field_type="input" data-original_id="nombre"
+														placeholder="Nombre">
 												</p>
 												<p class="et_pb_contact_field et_pb_contact_field_1 et_pb_contact_field_last"
 													data-id="email" data-type="email">
 
 
-													<label for="email"
-														class="et_pb_contact_form_label">Email </label>
+													<label for="email" class="et_pb_contact_form_label">Email </label>
 													<input type="text" id="et_pb_contact_email_0" class="input" value=""
 														name="email" data-required_mark="required"
 														data-field_type="email" data-original_id="email"
@@ -1291,8 +1296,8 @@ Ambulancia con medico y equipo de reanimación
 
 													<label for="et_pb_contact_mensaje_0"
 														class="et_pb_contact_form_label">Mensaje</label>
-													<textarea name="message"
-														id="et_pb_contact_mensaje_0" class="et_pb_contact_message input"
+													<textarea name="message" id="et_pb_contact_mensaje_0"
+														class="et_pb_contact_message input"
 														data-required_mark="required" data-field_type="text"
 														data-original_id="mensaje" placeholder="Mensaje"></textarea>
 												</p>
@@ -1302,13 +1307,11 @@ Ambulancia con medico y equipo de reanimación
 													class="et_pb_contactform_validate_field" />
 												<div class="et_contact_bottom_container">
 
-													<button type="submit"
-														class=" et_pb_button">enviar</button>
+													<button type="submit" class=" et_pb_button">enviar</button>
 												</div>
 												<input type="hidden" id="_wpnonce-et-pb-contact-form-submitted-0"
 													name="_wpnonce-et-pb-contact-form-submitted-0"
-													value="e85a0a0e05" /><input type="hidden" name="_wp_http_referer"
-													 />
+													value="e85a0a0e05" /><input type="hidden" name="_wp_http_referer" />
 											</form>
 										</div> <!-- .et_pb_contact -->
 									</div> <!-- .et_pb_contact_form_container -->
@@ -1567,7 +1570,35 @@ Ambulancia con medico y equipo de reanimación
 	</script>
 	<script type='text/javascript' src='js/custom.min.js'></script>
 	<script>
-		var styles=".fadeInC{animation:fadeAn 0.87s;}@keyframes fadeAn {from {opacity: 0;}to {opacity: 1;}}.scaleUpC{animation:scaleU 0.87s;}@keyframes scaleU {from {opacity: 0;transform: scale(0.7);}to {opacity: 1;transform: scale(1);}}.scaleDC{animation:scaleD 0.87s;}@keyframes scaleD {from {opacity: 0;transform: scale(1.2);}to {opacity: 1;transform: scale(1);}}.fadeLC{animation:fadeL 0.87s;}@keyframes fadeL {from {opacity: 0;transform: translateX(-30px);}to {opacity: 1;transform: translateX(0);}} .fadeRC{animation:fadeR 0.87s;}@keyframes fadeR {from {opacity: 0;transform: translateX(30px);}to {opacity: 1;transform: translateX(0);}}";let styleSheet=document.createElement("style");styleSheet.type="text/css",styleSheet.innerText=styles,document.head.appendChild(styleSheet);let fadeInTarg=document.querySelectorAll(".fadeIn"),scaleDTarg=document.querySelectorAll(".scaleDown"),scaleUTarg=document.querySelectorAll(".scaleUp"),fadeLeftTarg=document.querySelectorAll(".fadeLeft"),fadeRightTarg=document.querySelectorAll(".fadeRight"),ae=(e,a)=>{e.classList.add(a),setTimeout(()=>{e.style.opacity=1},50)};function io(e,a){new IntersectionObserver(t=>t.forEach(t=>(t=>t.isIntersecting&&ae(e,a))(t))).observe(e)}fadeLeftTarg&&fadeLeftTarg.forEach(e=>{e.style.opacity=0,io(e,"fadeRC")}),fadeRightTarg&&fadeRightTarg.forEach(e=>{e.style.opacity=0,io(e,"fadeLC")}),fadeInTarg&&fadeInTarg.forEach(e=>{e.style.opacity=0,io(e,"fadeInC")}),scaleDTarg&&scaleDTarg.forEach(e=>{e.style.opacity=0,io(e,"scaleDC")}),scaleUTarg&&scaleUTarg.forEach(e=>{e.style.opacity=0,io(e,"scaleUpC")});
+		var styles =
+			".fadeInC{animation:fadeAn 0.87s;}@keyframes fadeAn {from {opacity: 0;}to {opacity: 1;}}.scaleUpC{animation:scaleU 0.87s;}@keyframes scaleU {from {opacity: 0;transform: scale(0.7);}to {opacity: 1;transform: scale(1);}}.scaleDC{animation:scaleD 0.87s;}@keyframes scaleD {from {opacity: 0;transform: scale(1.2);}to {opacity: 1;transform: scale(1);}}.fadeLC{animation:fadeL 0.87s;}@keyframes fadeL {from {opacity: 0;transform: translateX(-30px);}to {opacity: 1;transform: translateX(0);}} .fadeRC{animation:fadeR 0.87s;}@keyframes fadeR {from {opacity: 0;transform: translateX(30px);}to {opacity: 1;transform: translateX(0);}}";
+		let styleSheet = document.createElement("style");
+		styleSheet.type = "text/css", styleSheet.innerText = styles, document.head.appendChild(styleSheet);
+		let fadeInTarg = document.querySelectorAll(".fadeIn"),
+			scaleDTarg = document.querySelectorAll(".scaleDown"),
+			scaleUTarg = document.querySelectorAll(".scaleUp"),
+			fadeLeftTarg = document.querySelectorAll(".fadeLeft"),
+			fadeRightTarg = document.querySelectorAll(".fadeRight"),
+			ae = (e, a) => {
+				e.classList.add(a), setTimeout(() => {
+					e.style.opacity = 1
+				}, 50)
+			};
+
+		function io(e, a) {
+			new IntersectionObserver(t => t.forEach(t => (t => t.isIntersecting && ae(e, a))(t))).observe(e)
+		}
+		fadeLeftTarg && fadeLeftTarg.forEach(e => {
+			e.style.opacity = 0, io(e, "fadeRC")
+		}), fadeRightTarg && fadeRightTarg.forEach(e => {
+			e.style.opacity = 0, io(e, "fadeLC")
+		}), fadeInTarg && fadeInTarg.forEach(e => {
+			e.style.opacity = 0, io(e, "fadeInC")
+		}), scaleDTarg && scaleDTarg.forEach(e => {
+			e.style.opacity = 0, io(e, "scaleDC")
+		}), scaleUTarg && scaleUTarg.forEach(e => {
+			e.style.opacity = 0, io(e, "scaleUpC")
+		});
 	</script>
 	<style>
 		.feature {
@@ -1619,14 +1650,14 @@ Ambulancia con medico y equipo de reanimación
 		@media only screen and (min-width: 600px) {
 
 
-			#convivencia .imagenes  :nth-child(1),
-			#mardelcup .imagenes  :nth-child(1) {
+			#convivencia .imagenes :nth-child(1),
+			#mardelcup .imagenes :nth-child(1) {
 				transform: translate(13vw, 18vh);
 
 			}
 
-			#seven .imagenes  :nth-child(1),
-			#premium .imagenes  :nth-child(1) {
+			#seven .imagenes :nth-child(1),
+			#premium .imagenes :nth-child(1) {
 				transform: translate(-13vw, 18vh);
 
 			}
@@ -1636,13 +1667,15 @@ Ambulancia con medico y equipo de reanimación
 			font-family: 'Oswald', Helvetica, Arial, Lucida, sans-serif;
 			font-weight: 300;
 			text-transform: uppercase;
-			font-size: calc(20px + 1vw);
+			font-size: calc(16px + 1vw);
 			letter-spacing: 15px;
 			line-height: 1.4em;
-			margin-top: 10px ;
+			margin-top: 10px;
+			width: 75%;
+			text-align: center;
 		}
 
-	
+
 		#convivencia {
 			background: rgb(255, 255, 255);
 			background: linear-gradient(90deg, rgba(255, 255, 255, 0) 68%, rgb(212, 40, 40) 100%);
@@ -1650,22 +1683,22 @@ Ambulancia con medico y equipo de reanimación
 
 		#premium {
 
-			background: rgb(45,116,240);
-background: -moz-linear-gradient(90deg, rgba(45,116,240,1) 0%, rgba(255,255,255,1) 37%);
-background: -webkit-linear-gradient(90deg, rgba(45,116,240,1) 0%, rgba(255,255,255,1) 37%);
-background: linear-gradient(90deg, rgba(45,116,240,1) 0%, rgba(255,255,255,1) 37%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2d74f0",endColorstr="#ffffff",GradientType=1);
+			background: rgb(45, 116, 240);
+			background: -moz-linear-gradient(90deg, rgba(45, 116, 240, 1) 0%, rgba(255, 255, 255, 1) 37%);
+			background: -webkit-linear-gradient(90deg, rgba(45, 116, 240, 1) 0%, rgba(255, 255, 255, 1) 37%);
+			background: linear-gradient(90deg, rgba(45, 116, 240, 1) 0%, rgba(255, 255, 255, 1) 37%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2d74f0", endColorstr="#ffffff", GradientType=1);
 		}
 
 		#mardelcup {
 			background: rgb(255, 255, 255);
 			background: linear-gradient(90deg, rgba(255, 255, 255, 0) 68%, rgba(41, 140, 42, 1) 100%);
 		}
-		.seven2 {
-			background: rgb(240,193,45);
-background: linear-gradient(90deg, rgba(240,193,45,1) 0%, rgba(255,255,255,1) 38%);
-		}
 
+		.seven2 {
+			background: rgb(240, 193, 45);
+			background: linear-gradient(90deg, rgba(240, 193, 45, 1) 0%, rgba(255, 255, 255, 1) 38%);
+		}
 	</style>
 	<style id="et-core-unified-cached-inline-styles-2">
 		.et_pb_text_20 p {
