--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 											<p>&nbsp;</p>
 											<p class="wideParagraph"><strong><img loading="lazy"
 														class="alignnone size-medium wp-image-276"
-														src="images/convivencia.png" alt="" width="300" height="186"
+														src="images/camp2.png" alt="" width="300" height="186"
 														sizes="(max-width: 300px) 100vw, 300px" /></strong></p>
 										</div>
 									</div>
@@ -868,8 +868,8 @@
 											<h3>Seven Semana del Mar </h3>
 											<p>Sábado <strong>4</strong>  y Domingo <strong>5</strong> de Diciembre
 												de <strong>2021</strong> &#8211; Mar del Plata.</p>
-											<p><img loading="lazy" class="alignnone wp-image-277" src="images/seven.png"
-													alt="" width="272" height="235"
+											<p><img loading="lazy" class="alignnone wp-image-277" src="images/camp1.png"
+													alt="" width="272" height="235" style="width: 90%; margin: 0 auto;"
 													sizes="(max-width: 272px) 100vw, 272px" />
 											</p>
 										</div>
@@ -905,10 +905,10 @@
 											<p>Viernes <strong></strong>11</strong>  y Sábado <strong>12</strong> de
 												Noviembre
 												de <strong>2022</strong> &#8211; Mar del Plata.</p>
-											<p class="wideParagraph"><img loading="lazy"
+											<p class="wideParagraph"><img loading="lazy" style="width: 400px;"
 													class="alignnone size-medium wp-image-283"
-													src="images/mardelcup.png" alt="" width="300" height="168"
-													sizes="(max-width: 300px) 100vw, 300px" /></p>
+													src="images/camp3.png" alt="" width="360" height="168"
+													sizes="(max-width: 360px) 100vw, 360px" /></p>
 										</div>
 									</div>
 									<ul
@@ -938,12 +938,12 @@
 
 
 										<div class="et_pb_text_inner">
-											<h3>Premium Cup &#8211; MAMIS + 30</h3>
+											<h3 style="width: 103%;">Premium Cup &#8211; MAMIS + 30</h3>
 											<p> Viernes <strong>26</strong> Y Sábado <strong>27</strong> de
 												Noviembre
 												de <strong>2021</strong> &#8211; Mar del Plata</p>
 											<p><img loading="lazy" class="alignnone size-medium wp-image-281"
-													src="images/premiumcup.png" alt="" width="300" height="178"
+													src="images/camp4.png" alt="" width="300" height="178"
 													sizes="(max-width: 300px) 100vw, 300px" /></p>
 										</div>
 									</div>
@@ -1307,7 +1307,7 @@
 													class="et_pb_contactform_validate_field" />
 												<div class="et_contact_bottom_container">
 
-													<button type="submit" class=" et_pb_button">enviar</button>
+													<button type="submit" class=" et_pb_button" style="cursor: pointer;">enviar</button>
 												</div>
 												<input type="hidden" id="_wpnonce-et-pb-contact-form-submitted-0"
 													name="_wpnonce-et-pb-contact-form-submitted-0"
@@ -1610,9 +1610,9 @@
 			grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 		}
 
-		.wideParagraph {
-			width: 113%;
-			transform: translateX(-12%);
+		.wideParagraph img {
+			width: 93%;
+			/* transform: translateX(-12%); */
 		}
 
 		.feature div {
