--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
 
 											<div class="et_pb_text_inner">
-												<h3 style="text-align: center;">26 años al servicio del Deporte Amateur
+												<h3 style="text-align: center;">28 años al servicio del Deporte Amateur
 													y de Alto Rendimiento</h3>
 											</div>
 										</div>
@@ -629,13 +629,11 @@
 
 								<div>
 									<div>
-										<h1>40 Torneo Seven Semana del Mar 2021</h1>
-										<p class="description">Seven Semana del Mar, el evento de hockey femenino mas
-											convocante de nuestra ciudad. Participan mas de 35 clubes, desde Ushuaia a
-											Salta y países vecinos. Congrega a mas de 1200 jugadoras. Disfrutá de tu
-											deporte favorito junto a un equipo de profesionales que te acompañarán en
-											cada momento. Piscina, recreación con nuestro equipo de Che Chiqui!! Y
-											muchas cosas mas!!! , No te quedes afuera… Sumate ya!</p>
+										<h1>18 Torneo Seven Copa Bristol 2022</h1>
+										<p class="description">El evento de hockey femenino mas convocante de nuestra ciudad. Participan mas de 35 clubes de todo el pais. Congrega a mas de 1200 jugadoras. Disfrutá de tu deporte favorito junto a un equipo de profesionales que te acompañarán en cada momento. Recreación con nuestro equipo Che Chiqui! Con quienes unimos fuerzas hace ya 11 años. Musica, carpa de maquillaje artistico, fiesta de cierre y muchas sorpresas mas!!! No te quedes afuera. Sumate ya! Para mas informacion contactanos por correo o Whatsapp.
+										</p>
+										<br>
+											<i>Declarado de interés deportivo por EMDER</i></p>
 									</div>
 								</div>
 								<div class="imagenes fadeLeft"><img loading="lazy"
@@ -655,13 +653,10 @@
 										alt="seven"></div>
 								<div>
 									<div>
-										<h1>XXVI ENCUENTRO CONVIVENCIA 2022</h1>
-										<p class="description">Encuentro Convivencia, 26 años de trayectoria hacen del
-											Encuentro Convivencia uno de los eventos deportivos nivel escolar más
-											importantes de la ciudad. Instituciones de todo el pais participan de esta
-											jornada deportivo recreativa donde rugby, hockey y muchas otras actividades
-											generan un espacio donde todos participan y se divierten . Este año no te
-											podes quedar afuera … Te esperamos!!!!</p>
+										<h1>XXVII ENCUENTRO CONVIVENCIA 2022</h1>
+										<p class="description">Encuentro Convivencia nivel escolar es un evento deportivo recreativo donde rugby, hockey y muchas otras actividades generan un espacio donde todos participan y se divierten. Este año no te podes quedar afuera. La fecha esta reprogramada para el calendario 2023! Para mas informacion contactanos por correo o Whatsapp.
+											<br>
+											<i>Declarado de interés deportivo por EMDER</i></p>
 									</div>
 								</div>
 							</div> <!-- .et_pb_section -->
@@ -669,32 +664,13 @@
 
 								<div>
 									<div>
-										<h1>PREMIUM CUP MAMIS + 30 2021</h1>
+										<h1>PREMIUM CUP MAMIS HOCKEY 2022</h1>
 										<p class="description">
-
-											Por medio de la presente les hacemos llegar la invitación a la PREMIUM CUP
-											MAMIS + 30 MAR DEL PLATA 2021 a realizarse el viernes 26 y el sábado 27 de
-											noviembre de 2021.
-											El costo por jugadora incluye:
-											Inscripción al torneo
-											Alojamiento con desayuno en hotelería 3 Estrellas*** noche del <b> viernes
-												26 y sábado 27.</b> <br>
-											Cena en el hotel, viernes 26.
-											Sabado 27 desayuno en los respectivos hoteles, almuerzo en el club.
-											9:00hsin excepción, presentacion de los equipos en el club.
-											Torneo jornada completa.
-											Sabado 27 cena en el hotel
-											Domingo 28 desayuno y check out
-
-											Durante el torneo
-											Carpa de maquillaje artístico en el predio!!!
-											Hidratacion ilimitada en todas las canchas.
-											Pulseras identificatorias
-											Seguridad privada, en todo el predio
-											Ambulancia con medico y equipo de reanimación
-											<br> Mar del Plata es un destino único, no te lo pierdas.
-
+											Mar del Plata es un destino único, no te lo pierdas.
 											Te esperamos para vivir juntos esta fiesta del hockey!
+											Durante el torneo podrás disfrutar de increibles momentos ya que nos encargarémos de que así sea. 
+											Alojamiento con desayuno y cena, almuerzo en el club.
+											Hidratacion ilimitada en todas las canchas, pulseras identificatorias, seguridad privada en todo el predio y ambulancia con medico y equipo de reanimación. Para mas informacion contactanos por correo o Whatsapp.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i>
 										</p>
@@ -716,8 +692,8 @@
 											buscamos la forma de hacer un torneo donde puedas disfrutar de un fin de
 											semana intenso en lo depotivo y en lo recreativo, en una ciudad como Mar del
 											Plata, única, donde todo es posible.
-
 											Veni a participar de una experiencia realmente distinta.
+											Para mas informacion contactanos por correo o Whatsapp.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i>
 
@@ -752,7 +728,7 @@
 												<li style="text-align: left;">VII Juegos Deportivos Sudamericanos 
 													ODESUR, Sede CABA. Sub Sede Mar del Plata.</li>
 												<li style="text-align: left;">Finales  Sudamericanas 
-													Interescolares, las disciplinas. Secretaria de Deportes de la
+													Interescolares. Secretaria de Deportes de la
 													Nacion/COA. Sede Mar del Plata</li>
 												<li style="text-align: left;">Juegos Deportivos Tecnologicos UTN.
 													Sede Mar del Plata</li>
@@ -773,7 +749,7 @@
 													Mar del Plata, AFA</li>
 												<li style="text-align: left;">Campeonato Preolimpico Sub 23. Mar del
 													Plata/Tandil, AFA</li>
-												<li style="text-align: left;">38 Ediciones Seven Semana del Mar,
+												<li style="text-align: left;">38 Ediciones Seven Copa Bristol Mar del Plata,
 													hockey. Sede Mar del Plata</li>
 												<li style="text-align: left;">Pre-Mundial de Voleibol, FeVA. Sede
 													Mar del Plata.</li>
@@ -809,7 +785,7 @@
 
 
 										<div class="et_pb_text_inner">
-											<h2 style="text-align: center;">Calendario 2021</h2>
+											<h2 style="text-align: center;">Calendario 2022</h2>
 											<p>&nbsp;</p>
 										</div>
 									</div>
@@ -829,12 +805,11 @@
 										<div class="et_pb_text_inner">
 											<h3>Encuentro Convivencia</h3>
 											<p>&nbsp;</p>
-											<p>Sábado <strong>7</strong>  de Mayo de <strong>2022</strong> &#8211;
-												Mar del Plata.</p>
+											<p>Fecha a confirmar</p>
 											<p>&nbsp;</p>
 											<p class="wideParagraph"><strong><img loading="lazy"
 														class="alignnone size-medium wp-image-276"
-														src="images/camp2.png" alt="" width="300" height="186"
+														src="images/convivencia.png" alt="" width="300" height="186"
 														sizes="(max-width: 300px) 100vw, 300px" /></strong></p>
 										</div>
 									</div>
@@ -865,12 +840,14 @@
 
 
 										<div class="et_pb_text_inner">
-											<h3>Seven Semana del Mar </h3>
-											<p>Sábado <strong>4</strong>  y Domingo <strong>5</strong> de Diciembre
-												de <strong>2021</strong> &#8211; Mar del Plata.</p>
-											<p><img loading="lazy" class="alignnone wp-image-277" src="images/camp1.png"
-													alt="" width="272" height="235" style="width: 90%; margin: 0 auto;"
-													sizes="(max-width: 272px) 100vw, 272px" />
+											<h3>Seven Copa Bristol Mar del Plata </h3>
+											<p>Sábado <strong>17</strong>  y Domingo <strong>18</strong> de Diciembre
+												de <strong>2022</strong> &#8211; Mar del Plata.</p>
+											<p>
+												<img loading="lazy" style="width: 400px;"
+													class="alignnone size-medium wp-image-283"
+													src="images/bristol.png" alt="" width="360" height="168"
+													sizes="(max-width: 360px) 100vw, 360px" />
 											</p>
 										</div>
 									</div>
@@ -902,7 +879,7 @@
 
 										<div class="et_pb_text_inner">
 											<h3>Mar del Cup &#8211; Futbol Femenino</h3>
-											<p>Viernes <strong></strong>11</strong>  y Sábado <strong>12</strong> de
+											<p>Jueves <strong></strong>10</strong>  y Viernes <strong>11</strong> de
 												Noviembre
 												de <strong>2022</strong> &#8211; Mar del Plata.</p>
 											<p class="wideParagraph"><img loading="lazy" style="width: 400px;"
@@ -938,12 +915,12 @@
 
 
 										<div class="et_pb_text_inner">
-											<h3 style="width: 103%;">Premium Cup &#8211; MAMIS + 30</h3>
-											<p> Viernes <strong>26</strong> Y Sábado <strong>27</strong> de
-												Noviembre
-												de <strong>2021</strong> &#8211; Mar del Plata</p>
+											<h3 style="width: 103%;">Premium Cup &#8211; MAMIS HOCKEY</h3>
+											<p> Jueves <strong>15</strong> Y Viernes <strong>16</strong> de
+												Diciembre
+												de <strong>2022</strong> &#8211; Mar del Plata</p>
 											<p><img loading="lazy" class="alignnone size-medium wp-image-281"
-													src="images/camp4.png" alt="" width="300" height="178"
+													src="images/premiumcup.png" alt="" width="300" height="178"
 													sizes="(max-width: 300px) 100vw, 300px" /></p>
 										</div>
 									</div>
@@ -1010,7 +987,7 @@
 
 
 										<div class="et_pb_text_inner">
-											<h3>«Seven Semana del Mar»</h3>
+											<h3>«Seven Copa Bristol Mar del Plata»</h3>
 										</div>
 									</div> 
 								</div> 
@@ -1023,11 +1000,11 @@
 
 
 										<div class="et_pb_text_inner">
-											<p>Seven Semana del Mar, el evento de hockey femenino mas convocante de
+											<p>Seven Copa Bristol Mar del Plata, el evento de hockey femenino mas convocante de
 												nuestra ciudad. Participan mas de 35 clubes, desde Ushuaia a Salta y
 												países vecinos. Congrega a mas de 1200 jugadoras. Disfrutá de tu
 												deporte favorito junto a un equipo de profesionales que te
-												acompañarán en cada momento. Piscina, recreación con nuestro equipo
+												acompañarán en cada momento. Recreación con nuestro equipo
 												de Che Chiqui!! Y muchas cosas mas!!! , No te quedes afuera… Sumate
 												ya!</p>
 										</div>
@@ -1329,7 +1306,7 @@
 											<h3>DS Eventos Deportivos</h3>
 											<p>Teléfono: +54 9 223 417-3915</p>
 											<p>Mail: <a
-													href="mailto:info@dseventosdeportivo.com.ar">info@dseventosdeportivo.com.ar</a>
+													href="mailto:info@dseventosdeportivos.com.ar">info@dseventosdeportivos.com.ar</a>
 											</p>
 											<p><strong>Director: Mariano Santa María</strong></p>
 											<p>&nbsp;</p>
