--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
 
 											<div class="et_pb_text_inner">
-												<h3 style="text-align: center;">28 años al servicio del Deporte Amateur
+												<h3 style="text-align: center;">26 años al servicio del Deporte Amateur
 													y de Alto Rendimiento</h3>
 											</div>
 										</div>
@@ -629,11 +629,18 @@
 
 								<div>
 									<div>
-										<h1>18 Torneo Seven Copa Bristol 2022</h1>
-										<p class="description">El evento de hockey femenino mas convocante de nuestra ciudad. Participan mas de 35 clubes de todo el pais. Congrega a mas de 1200 jugadoras. Disfrutá de tu deporte favorito junto a un equipo de profesionales que te acompañarán en cada momento. Recreación con nuestro equipo Che Chiqui! Con quienes unimos fuerzas hace ya 11 años. Musica, carpa de maquillaje artistico, fiesta de cierre y muchas sorpresas mas!!! No te quedes afuera. Sumate ya! Para mas informacion contactanos por correo o Whatsapp.
+										<h1>Seven Hockey Copa Bristol Mar del Plata 2022</h1>
+										<p class="description">El evento de hockey femenino mas convocante de nuestra
+											ciudad. Participan mas de 35 clubes de todo el pais. Congrega a mas de 1200
+											jugadoras. Disfrutá de tu deporte favorito junto a un equipo de
+											profesionales que te acompañarán en cada momento. Recreación con nuestro
+											equipo Che Chiqui! Con quienes unimos fuerzas hace ya 11 años. Musica, carpa
+											de maquillaje artistico, fiesta de cierre y muchas sorpresas mas!!! No te
+											quedes afuera. Sumate ya! Para mas informacion contactanos por correo o
+											Whatsapp.
 										</p>
 										<br>
-											<i>Declarado de interés deportivo por EMDER</i></p>
+										<i>Declarado de interés deportivo por EMDER</i></p>
 									</div>
 								</div>
 								<div class="imagenes fadeLeft"><img loading="lazy"
@@ -653,8 +660,12 @@
 										alt="seven"></div>
 								<div>
 									<div>
-										<h1>XXVII ENCUENTRO CONVIVENCIA 2022</h1>
-										<p class="description">Encuentro Convivencia nivel escolar es un evento deportivo recreativo donde rugby, hockey y muchas otras actividades generan un espacio donde todos participan y se divierten. Este año no te podes quedar afuera. La fecha esta reprogramada para el calendario 2023! Para mas informacion contactanos por correo o Whatsapp.
+										<h1>ENCUENTRO CONVIVENCIA 2022</h1>
+										<p class="description">Encuentro Convivencia nivel escolar es un evento
+											deportivo recreativo donde rugby, hockey y muchas otras actividades generan
+											un espacio donde todos participan y se divierten. Este año no te podes
+											quedar afuera. La fecha esta reprogramada para el calendario 2023! Para mas
+											informacion contactanos por correo o Whatsapp.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i></p>
 									</div>
@@ -666,11 +677,7 @@
 									<div>
 										<h1>PREMIUM CUP MAMIS HOCKEY 2022</h1>
 										<p class="description">
-											Mar del Plata es un destino único, no te lo pierdas.
-											Te esperamos para vivir juntos esta fiesta del hockey!
-											Durante el torneo podrás disfrutar de increibles momentos ya que nos encargarémos de que así sea. 
-											Alojamiento con desayuno y cena, almuerzo en el club.
-											Hidratacion ilimitada en todas las canchas, pulseras identificatorias, seguridad privada en todo el predio y ambulancia con medico y equipo de reanimación. Para mas informacion contactanos por correo o Whatsapp.
+											Fecha jueves 15 y viernes 16 de Diciembre 2022.  Para mas informacion contactanos por correo o Whatsapp. Te esperamos para vivir juntos esta fiesta del hockey.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i>
 										</p>
@@ -687,16 +694,9 @@
 								<div>
 									<div>
 										<h1>MARDEL CUP 2022</h1>
-										<p class="description">El futbol femenino, ha venido evolucionado muchisimo en
-											los ultimos 15 años. Desde DS, con la experiencia que nos caracteriza,
-											buscamos la forma de hacer un torneo donde puedas disfrutar de un fin de
-											semana intenso en lo depotivo y en lo recreativo, en una ciudad como Mar del
-											Plata, única, donde todo es posible.
-											Veni a participar de una experiencia realmente distinta.
-											Para mas informacion contactanos por correo o Whatsapp.
+										<p class="description">Desde DS, buscamos hacer un torneo donde puedas disfrutar de un fin de semana intenso en lo deportivo y en lo recreativo.  Veni a participar de una experiencia realmente distinta, jueves 10 y viernes 11 de noviembre 2022  Para mas informacion contactanos por correo o Whatsapp.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i>
-
 										</p>
 									</div>
 								</div>
@@ -749,8 +749,6 @@
 													Mar del Plata, AFA</li>
 												<li style="text-align: left;">Campeonato Preolimpico Sub 23. Mar del
 													Plata/Tandil, AFA</li>
-												<li style="text-align: left;">38 Ediciones Seven Copa Bristol Mar del Plata,
-													hockey. Sede Mar del Plata</li>
 												<li style="text-align: left;">Pre-Mundial de Voleibol, FeVA. Sede
 													Mar del Plata.</li>
 												<li style="text-align: left;">Panamericano Junior Federación
@@ -845,8 +843,8 @@
 												de <strong>2022</strong> &#8211; Mar del Plata.</p>
 											<p>
 												<img loading="lazy" style="width: 400px;"
-													class="alignnone size-medium wp-image-283"
-													src="images/bristol.png" alt="" width="360" height="168"
+													class="alignnone size-medium wp-image-283" src="images/sevenlogo.png"
+													alt="" width="360" height="168"
 													sizes="(max-width: 360px) 100vw, 360px" />
 											</p>
 										</div>
@@ -883,8 +881,8 @@
 												Noviembre
 												de <strong>2022</strong> &#8211; Mar del Plata.</p>
 											<p class="wideParagraph"><img loading="lazy" style="width: 400px;"
-													class="alignnone size-medium wp-image-283"
-													src="images/camp3.png" alt="" width="360" height="168"
+													class="alignnone size-medium wp-image-283" src="images/camp3.png"
+													alt="" width="360" height="168"
 													sizes="(max-width: 360px) 100vw, 360px" /></p>
 										</div>
 									</div>
@@ -1284,7 +1282,8 @@
 													class="et_pb_contactform_validate_field" />
 												<div class="et_contact_bottom_container">
 
-													<button type="submit" class=" et_pb_button" style="cursor: pointer;">enviar</button>
+													<button type="submit" class=" et_pb_button"
+														style="cursor: pointer;">enviar</button>
 												</div>
 												<input type="hidden" id="_wpnonce-et-pb-contact-form-submitted-0"
 													name="_wpnonce-et-pb-contact-form-submitted-0"
@@ -1613,7 +1612,7 @@
 		}
 
 		@media only screen and (max-width:800px) {
-			#seven {}
+			 
 
 			#convivencia,
 			#mardelcup {
