--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 										alt="seven"></div>
 								<div>
 									<div>
-										<h1>ENCUENTRO CONVIVENCIA 2022</h1>
+										<h1>ENCUENTRO CONVIVENCIA</h1>
 										<p class="description">Encuentro Convivencia nivel escolar es un evento
 											deportivo recreativo donde rugby, hockey y muchas otras actividades generan
 											un espacio donde todos participan y se divierten. Este año no te podes
@@ -683,9 +683,9 @@
 										</p>
 									</div>
 								</div>
-								<div class="imagenes fadeLeft"><img loading="lazy" src="./images/premium1.jpg"
+								<div class="imagenes fadeLeft"><img loading="lazy" src="./galeria/images/_MG_0589.jpg"
 										alt="seven">
-									<img loading="lazy" src="./images/premium2.jpg" alt="seven"></div>
+									<img loading="lazy" src="./galeria/images/_MG_0722.jpg" alt="seven"></div>
 							</div>
 							<div id="mardelcup" class="feature  fadeIn">
 								<div class="imagenes fadeRight"><img loading="lazy" src="./images/mardelcup1.jpg"
@@ -838,7 +838,7 @@
 
 
 										<div class="et_pb_text_inner">
-											<h3>Seven Copa Bristol Mar del Plata </h3>
+											<h3>Seven Hockey Copa Bristol Mar del Plata </h3>
 											<p>Sábado <strong>17</strong>  y Domingo <strong>18</strong> de Diciembre
 												de <strong>2022</strong> &#8211; Mar del Plata.</p>
 											<p>
