--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 									<img loading="lazy" src="./images/mardelcup2.jpg" alt="seven"></div>
 								<div>
 									<div>
-										<h1>MARDEL CUP 2022</h1>
+										<h1>MARDEL CUP - Futbol Femenino 2022</h1>
 										<p class="description">Desde DS, buscamos hacer un torneo donde puedas disfrutar de un fin de semana intenso en lo deportivo y en lo recreativo.  Veni a participar de una experiencia realmente distinta, jueves 10 y viernes 11 de noviembre 2022  Para mas informacion contactanos por correo o Whatsapp.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i>
