--- a/index.html
+++ b/index.html
@@ -677,7 +677,9 @@
 									<div>
 										<h1>PREMIUM CUP MAMIS HOCKEY 2022</h1>
 										<p class="description">
-											Fecha jueves 15 y viernes 16 de Diciembre 2022.  Para mas informacion contactanos por correo o Whatsapp. Te esperamos para vivir juntos esta fiesta del hockey.
+											Fecha jueves 15 y viernes 16 de Diciembre 2022. Para mas informacion
+											contactanos por correo o Whatsapp. Te esperamos para vivir juntos esta
+											fiesta del hockey.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i>
 										</p>
@@ -694,7 +696,10 @@
 								<div>
 									<div>
 										<h1>MARDEL CUP - Futbol Femenino 2022</h1>
-										<p class="description">Desde DS, buscamos hacer un torneo donde puedas disfrutar de un fin de semana intenso en lo deportivo y en lo recreativo.  Veni a participar de una experiencia realmente distinta, jueves 10 y viernes 11 de noviembre 2022  Para mas informacion contactanos por correo o Whatsapp.
+										<p class="description">Desde DS, buscamos hacer un torneo donde puedas disfrutar
+											de un fin de semana intenso en lo deportivo y en lo recreativo. Veni a
+											participar de una experiencia realmente distinta, jueves 10 y viernes 11 de
+											noviembre 2022 Para mas informacion contactanos por correo o Whatsapp.
 											<br>
 											<i>Declarado de interés deportivo por EMDER</i>
 										</p>
@@ -843,8 +848,8 @@
 												de <strong>2022</strong> &#8211; Mar del Plata.</p>
 											<p>
 												<img loading="lazy" style="width: 400px;"
-													class="alignnone size-medium wp-image-283" src="images/sevenlogo.png"
-													alt="" width="360" height="168"
+													class="alignnone size-medium wp-image-283"
+													src="images/seven-blanco.png" alt="" width="360" height="168"
 													sizes="(max-width: 360px) 100vw, 360px" />
 											</p>
 										</div>
@@ -1612,7 +1617,7 @@
 		}
 
 		@media only screen and (max-width:800px) {
-			 
+
 
 			#convivencia,
 			#mardelcup {
@@ -3054,7 +3059,7 @@
 		}
 
 		#eventos div {
-			height: 480px
+			height: 527px;
 		}
 	</style>
 </body>
